Fix summary margin-collapse

--- a/packages/fluent-theme/src/components/activity/PartGroupingDecorator.module.css
+++ b/packages/fluent-theme/src/components/activity/PartGroupingDecorator.module.css
@@ -504,11 +504,10 @@
     }
 
     :global(.collapsible-content__content) {
-      margin-block: var(--webchat-spacingVerticalNone);
+      margin-block: var(--webchat-part-grouping__collapsible-content--space-block-start-end);
 
       :global(.stacked-layout__attachment-list) {
         gap: var(--webchat-spacingVerticalS);
-        margin-block-start: var(--webchat-spacingVerticalS);
       }
 
       :global(.stacked-layout__attachment-row) {
@@ -531,9 +530,7 @@
     --webchat-part-grouping__message-status--space-block: var(--webchat-spacingVerticalXS);
     --webchat-part-grouping__code-block--space-inline: var(--webchat-part-grouping__bubble--space-inline)
       var(--webchat-spacingHorizontalNone);
-    --webchat-part-grouping__collapsible-content--space-block-start-end: var(
-        --webchat-part-grouping__bubble--space-block
-      )
+    --webchat-part-grouping__collapsible-content--space-block-start-end: var(--webchat-spacingVerticalS)
       var(--webchat-spacingVerticalNone);
 
     :global(.stacked-layout .stacked-layout__main .stacked-layout__title),
@@ -696,6 +693,12 @@
       }
 
       :global(.webchat__bubble .collapsible-content .collapsible-content__content) {
+        margin-block: var(--webchat-spacingVerticalNone);
+
+        :global(.stacked-layout__attachment-list) {
+          margin-block-start: var(--webchat-spacingVerticalS);
+        }
+
         :global(.stacked-layout__attachment) {
           max-width: var(--webchat-part-grouping__bubble--max-width);
         }
